@startuml "Empleados"

class Empresa {
    {static} - PORC_ADIC_2_A_5_ANIOS:number
    {static} - PORC_ADIC_MAS_DE_5_ANIOS:number
    - nombreEmpleado:string

    + agregarEmpleado(Empleado):void
    + getSalarios():number
    + empleadoConMasClientes():Empleado

}

abstract class Empleado {
    - DNI:string 
    - nombres:string
    - apellidos:string
    - fechaIngreso:Date 

    + getSalario():number
    + traerFechaIngreso():Date
    + fullName():string
}

class EmpleadoSalarioFijo {
    - sueldoBasico:number

    + getSalario():number
    - calculoPorcentaje():number
    
}

class EmpleadosComision {
    - salarioMinimo:number
    - numeroClientesCaptados:number
    - montoPorClienteCaptado:number

    + getSalario():number
    + numeroClientes():number
}

Empleado <-- Empresa
EmpleadoSalarioFijo <|-- Empleado
EmpleadosComision <|-- Empleado

@enduml